--- a/Home.css
+++ b/Home.css
@@ -4,15 +4,15 @@
 }
 
 .u-section-1 .u-shape-1 {
-  width: calc(((100% - 1140px) / 2) + 401px);
+  width: 481px;
   height: 400px;
-  margin: 65px auto 0 0;
+  margin: 37px auto 0 calc(((100% - 1140px) / 2) + -54px);
 }
 
 .u-section-1 .u-shape-2 {
   width: calc(((100% - 1140px) / 2) + 383px);
   height: 393px;
-  margin: 336px 0 0 auto;
+  margin: 364px 0 0 auto;
 }
 
 .u-section-1 .u-layout-wrap-1 {
@@ -83,11 +83,13 @@
 
 .u-section-1 .u-text-4 {
   font-weight: 700;
+  text-shadow: 2px 2px 8px rgba(0,0,0,0.4);
   margin: 26px 10px 0;
 }
 
 .u-section-1 .u-text-5 {
   font-weight: normal;
+  text-shadow: 0 2px 8px rgba(128,128,128,1);
   margin: 0 10px;
 }
 
@@ -136,7 +138,6 @@
   }
 
   .u-section-1 .u-shape-1 {
-    width: calc(((100% - 940px) / 2) + 401px);
     margin-left: calc(((100% - 1140px) / 2) + 236px);
   }
 
@@ -183,19 +184,18 @@
   }
 
   .u-section-1 .u-shape-1 {
-    width: calc(((100% - 720px) / 2) + 401px);
-    margin-left: calc(((100% - 1140px) / 2) + 210px);
+    margin-top: 30px;
+    margin-left: calc(((100% - 720px) / 2) + -17px);
   }
 
   .u-section-1 .u-shape-2 {
-    width: calc(((100% - 720px) / 2) + 413px);
-    margin-top: 329px;
-    margin-right: 0;
+    margin-top: 279px;
+    margin-right: calc(((100% - 720px) / 2) + -38px);
   }
 
   .u-section-1 .u-layout-wrap-1 {
     width: 720px;
-    margin-top: -1052px;
+    margin-top: -994px;
     margin-left: calc(((100% - 1140px) / 2) + 210px);
   }
 
@@ -227,13 +227,12 @@
   }
 
   .u-section-1 .u-shape-1 {
-    width: calc(((100% - 540px) / 2) + 401px);
     margin-left: calc(((100% - 1140px) / 2) + 300px);
   }
 
   .u-section-1 .u-shape-2 {
-    width: calc(((100% - 540px) / 2) + 413px);
     margin-top: 316px;
+    margin-right: calc(((100% - 540px) / 2) + -38px);
   }
 
   .u-section-1 .u-layout-wrap-1 {
@@ -282,20 +281,20 @@
   }
 
   .u-section-1 .u-shape-1 {
-    width: calc(((100% - 340px) / 2) + 340px);
-    margin-top: 35px;
-    margin-right: 0;
-    margin-left: 50px;
+    width: 390px;
+    margin-right: calc(((100% - 340px) / 2) + -37px);
+    margin-left: auto;
   }
 
   .u-section-1 .u-shape-2 {
-    width: calc(((100% - 340px) / 2) + 340px);
-    margin-right: auto;
-    margin-left: calc(((100% - 1140px) / 2) + 400px);
+    width: 390px;
+    margin-top: 319px;
+    margin-right: calc(((100% - 340px) / 2) + -37px);
   }
 
   .u-section-1 .u-layout-wrap-1 {
     width: 340px;
+    margin-top: -1043px;
     margin-left: calc(((100% - 1140px) / 2) + 400px);
   }
 
@@ -328,6 +327,7 @@
   }
 
   .u-section-1 .u-text-5 {
+    width: auto;
     margin-left: 30px;
     margin-right: 30px;
   }
@@ -335,6 +335,7 @@
   .u-section-1 .u-social-icons-1 {
     margin-top: -20px;
     margin-right: 0;
+    margin-bottom: -12px;
   }
 
   .u-section-1 .u-image-3 {
@@ -386,7 +387,7 @@
   border-style: none none solid;
   text-transform: uppercase;
   font-weight: 700;
-  margin: -56px 60px 0 auto;
+  margin: -56px 103px 0 auto;
   padding: 7px 0;
 }
 
@@ -397,7 +398,7 @@
   border-style: none;
   text-transform: uppercase;
   font-weight: 700;
-  margin: 42px auto 0 60px;
+  margin: 43px auto 0 60px;
   padding: 10px 47px 10px 46px;
 }
 
@@ -476,7 +477,7 @@
   }
 
   .u-section-2 .u-btn-1 {
-    margin-right: 10px;
+    margin-right: 3px;
   }
 
   .u-section-2 .u-btn-2 {
